<resources>
    <string name="app_name">Fragment Exercise</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_content">Even bad code can function. But if code isn’t clean, it can bring a development organization to its knees. Every year, countless hours and significant resources are lost because of poorly written code. But it doesn’t have to be that way. Noted software expert Robert C. Martin, presents a revolutionary paradigm with Clean Code: A Handbook of Agile Software Craftsmanship. Martin, who has helped bring agile principles from a practitioner’s point of view to tens of thousands of programmers, has teamed up with his colleagues from Object Mentor to distill their best agile practice of cleaning code “on the fly” into a book that will instill within you the values of software craftsman, and make you a better programmer―but only if you work at it. What kind of work will you be doing? You’ll be reading code―lots of code.</string>
    <string name="clean_code">Clean Code</string>
    <string name="book_image">Book image</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="like_the_article">LIKE THE ARTICLE?</string>
    <string name="go_to_part_2">Next to Part 2 of exercise</string>
    <string name="open">Open</string>
    <string name="back_to_part_1">Back to Part 1 of exercise</string>
</resources>