<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:background="@color/yellow"
    tools:context=".FragmentExample1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingStart="10dp"
        android:textSize="18sp"
        android:text="@string/like_the_article"
        tools:ignore="RtlSymmetry" />

    <RadioButton
        android:id="@+id/radioButtonYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:text="@string/yes"
        />

    <RadioButton
        android:id="@+id/radioButtonNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginEnd="50dp"
        android:text="@string/no" />

</LinearLayout>